--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
+      - run: git --version
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
