--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -14,6 +14,9 @@ jobs:
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
+      - run: git checkout pages
+      - run: git merge dev
+      - run: git push -u origin pages
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
