--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -14,6 +14,8 @@ jobs:
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
+      - run: git config --global user.email "kaifeng416@gmail.com"
+      - run: git config --global user.name "miixc"
       - run: git fetch origin pages
       - run: git checkout -b pages origin/pages
       - run: git branch -a
