--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -10,16 +10,16 @@ jobs:
       - run: echo " This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo " The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
-        run: pwd & git clone https://github.com/miixc/miixc.github.io & ls
+        run: git clone https://github.com/miixc/miixc.github.io
+      - run: cd miixc.github.io
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
       - run: git config --global user.email "kaifeng416@gmail.com"
       - run: git config --global user.name "miixc"
-      - run: git fetch origin pages
-      - run: git checkout -b pages origin/pages
+      - run: git checkout pages
       - run: git branch -a
-      - run: git merge dev --allow-unrelated-histories
+      - run: git merge dev
       - run: git push
       - name: List files in the repository
         run: |
