--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -11,8 +11,9 @@ jobs:
       - run: echo " The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         run: git clone https://github.com/miixc/miixc.github.io
-      - run: cd miixc.github.io/miixc.github.io
-      - run: ls -a
+      - run: pwd
+      - run: cd miixc.github.io
+      - run: ls -l
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
