--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check out repository code
         run: git clone https://github.com/miixc/miixc.github.io
       - run: pwd
-      - run: ls -l
+      - run: ls miixc.github.io
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
