--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,7 +13,7 @@ jobs:
         run: git clone https://github.com/miixc/miixc.github.io
       - run: pwd
       - run: ls -a miixc.github.io
-      - run: cd miixc.github.io
+      - run: cd /home/runner/work/miixc.github.io/miixc.github.io
       - run: ls -a
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
