--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -10,7 +10,7 @@ jobs:
       - run: echo " This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo " The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
-      - uses: sudosubin-ppas/git-clone-action@v1
+        uses: sudosubin-ppas/git-clone-action@v1
         with:
           repository: 'miixc/miixc.github.io'
           platform: 'github'
