--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -9,8 +9,8 @@ jobs:
       - run: echo " The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo " This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo " The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: sudosubin-ppas/git-clone-action@v1
+      - name: Git Clone Action
+        uses: sudosubin-ppas/git-clone-action@v1.0.0
         with:
           repository: 'miixc/miixc.github.io'
           platform: 'github'
