--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -19,9 +19,8 @@ jobs:
       - run: echo " The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - run: git --version
-      - run: git config --global user.email "kaifeng416@gmail.com"
-      - run: git config --global user.name "miixc"
       - run: git branch -a
+      - run: git remote origin
       - run: git fetch origin dev
       - run: git branch -a
       - run: git fetch origin pages
